--- a/templates/home.html
+++ b/templates/home.html
@@ -5,16 +5,7 @@
     <script type="text/javascript" src="site_media/jquery.min.js"></script>
     <script type="text/javascript" src="site_media/paper.js"></script>
     <script type="text/javascript" src="site_media/home.js"></script>
-    <script type="text/javascript">
-    </script>
-    <style type="text/css">
-      #mycanvas{
-border: 5px solid black;
-}
-.sprite_image{
-display:none;
-}
-    </style>
+    <link href="site_media/style.css" rel="stylesheet" type="text/css"  />
   </head>
   <body>
     <h1>Welcome {{ username }}</h1>
